Re-run all notebooks

--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -56,7 +56,7 @@
     "# Suppress occasional joblib warnings\n",
     "%env PYTHONWARNINGS=ignore::UserWarning\n",
     "\n",
-    "warnings.simplefilter(\"ignore\", UserWarning)\n"
+    "warnings.simplefilter(\"ignore\", UserWarning)"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "times = range(171)\n",
     "verbose = bool(int(os.environ.get(\"VERBOSE\", 0)))\n",
     "\n",
-    "grid_resolution = 0.5  # degrees\n"
+    "grid_resolution = 0.5  # degrees"
    ]
   },
   {
@@ -150,7 +150,7 @@
     "        model_dir,\n",
     "        \"*.rot\",\n",
     "    )\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "c7415048",
    "metadata": {
     "execution": {
@@ -201,12 +201,13 @@
     "    rotation_model=rotation_filenames,\n",
     "    n_jobs=n_jobs,\n",
     "    verbose=verbose,\n",
-    ")\n"
+    ")\n",
+    "grid_data = grid_data.dropna(subset=[\"present_lon\", \"present_lat\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "42851c3c",
    "metadata": {
     "execution": {
@@ -227,7 +228,7 @@
    "outputs": [],
    "source": [
     "if grid_filename is not None:\n",
-    "    grid_data.to_csv(grid_filename, index=False)\n"
+    "    grid_data.to_csv(grid_filename, index=False)"
    ]
   },
   {
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "7c03c5a2",
    "metadata": {
     "execution": {
@@ -277,7 +278,7 @@
     ")\n",
     "subduction_data = calculate_water_thickness(data=subduction_data)\n",
     "subduction_data = calculate_slab_flux(subduction_data)\n",
-    "subduction_data = calculate_slab_dip(subduction_data)\n"
+    "subduction_data = calculate_slab_dip(subduction_data)"
    ]
   },
   {
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "fbadac30",
    "metadata": {
     "execution": {
@@ -326,7 +327,7 @@
     "    n_jobs=n_jobs,\n",
     "    verbose=verbose,\n",
     "    output_filename=coregistered_filename,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -349,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "317048a8",
    "metadata": {
     "execution": {
@@ -379,7 +380,7 @@
     "    data=coregistered_data,\n",
     "    filename=mag_anomaly_filename,\n",
     "    n_jobs=n_jobs,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -401,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "a90d7da4",
    "metadata": {
     "execution": {
@@ -427,7 +428,7 @@
     "    n_jobs=n_jobs,\n",
     "    column_name=\"erosion (m)\",\n",
     "    verbose=verbose,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -449,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "333c91a8",
    "metadata": {
     "execution": {
@@ -469,7 +470,7 @@
    },
    "outputs": [],
    "source": [
-    "coregistered_data.to_csv(output_filename, index=False)\n"
+    "coregistered_data.to_csv(output_filename, index=False)"
    ]
   },
   {
@@ -506,7 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.7"
   },
   "papermill": {
    "default_parameters": {},
