--- a/02a-create_probability_maps_global.ipynb
+++ b/02a-create_probability_maps_global.ipynb
@@ -6,10 +6,10 @@
    "id": "80263a75",
    "metadata": {
     "papermill": {
-     "duration": 0.002635,
-     "end_time": "2024-03-13T05:49:58.577302",
+     "duration": 0.004189,
+     "end_time": "2024-05-09T00:43:59.925981",
      "exception": false,
-     "start_time": "2024-03-13T05:49:58.574667",
+     "start_time": "2024-05-09T00:43:59.921792",
      "status": "completed"
     },
     "tags": []
@@ -26,16 +26,16 @@
    "id": "9057911b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T05:49:58.582138Z",
-     "iopub.status.busy": "2024-03-13T05:49:58.581886Z",
-     "iopub.status.idle": "2024-03-13T05:49:58.588190Z",
-     "shell.execute_reply": "2024-03-13T05:49:58.587634Z"
+     "iopub.execute_input": "2024-05-09T00:43:59.932461Z",
+     "iopub.status.busy": "2024-05-09T00:43:59.932155Z",
+     "iopub.status.idle": "2024-05-09T00:43:59.939148Z",
+     "shell.execute_reply": "2024-05-09T00:43:59.938342Z"
     },
     "papermill": {
-     "duration": 0.010618,
-     "end_time": "2024-03-13T05:49:58.589919",
+     "duration": 0.012293,
+     "end_time": "2024-05-09T00:43:59.941101",
      "exception": false,
-     "start_time": "2024-03-13T05:49:58.579301",
+     "start_time": "2024-05-09T00:43:59.928808",
      "status": "completed"
     },
     "tags": []
@@ -51,16 +51,16 @@
    "id": "5303979d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T05:49:58.594308Z",
-     "iopub.status.busy": "2024-03-13T05:49:58.594078Z",
-     "iopub.status.idle": "2024-03-13T05:50:02.982506Z",
-     "shell.execute_reply": "2024-03-13T05:50:02.981849Z"
+     "iopub.execute_input": "2024-05-09T00:43:59.946863Z",
+     "iopub.status.busy": "2024-05-09T00:43:59.946594Z",
+     "iopub.status.idle": "2024-05-09T00:44:03.390562Z",
+     "shell.execute_reply": "2024-05-09T00:44:03.389928Z"
     },
     "papermill": {
-     "duration": 4.392185,
-     "end_time": "2024-03-13T05:50:02.983957",
+     "duration": 3.448646,
+     "end_time": "2024-05-09T00:44:03.392123",
      "exception": false,
-     "start_time": "2024-03-13T05:49:58.591772",
+     "start_time": "2024-05-09T00:43:59.943477",
      "status": "completed"
     },
     "tags": []
@@ -86,16 +86,16 @@
    "id": "7c013b25",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T05:50:02.988356Z",
-     "iopub.status.busy": "2024-03-13T05:50:02.988009Z",
-     "iopub.status.idle": "2024-03-13T05:50:02.993818Z",
-     "shell.execute_reply": "2024-03-13T05:50:02.993008Z"
+     "iopub.execute_input": "2024-05-09T00:44:03.396919Z",
+     "iopub.status.busy": "2024-05-09T00:44:03.396406Z",
+     "iopub.status.idle": "2024-05-09T00:44:03.402879Z",
+     "shell.execute_reply": "2024-05-09T00:44:03.402346Z"
     },
     "papermill": {
-     "duration": 0.009492,
-     "end_time": "2024-03-13T05:50:02.995247",
+     "duration": 0.011637,
+     "end_time": "2024-05-09T00:44:03.405553",
      "exception": false,
-     "start_time": "2024-03-13T05:50:02.985755",
+     "start_time": "2024-05-09T00:44:03.393916",
      "status": "completed"
     },
     "tags": []
@@ -104,7 +104,7 @@
     {
      "data": {
       "text/plain": [
-       "<dask.config.set at 0x1c2143d50>"
+       "<dask.config.set at 0x1bda15f90>"
       ]
      },
      "execution_count": 3,
@@ -123,10 +123,10 @@
    "id": "632c1c44",
    "metadata": {
     "papermill": {
-     "duration": 0.001526,
-     "end_time": "2024-03-13T05:50:02.998639",
+     "duration": 0.001658,
+     "end_time": "2024-05-09T00:44:03.408966",
      "exception": false,
-     "start_time": "2024-03-13T05:50:02.997113",
+     "start_time": "2024-05-09T00:44:03.407308",
      "status": "completed"
     },
     "tags": []
@@ -141,16 +141,16 @@
    "id": "f01bd62d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T05:50:03.002772Z",
-     "iopub.status.busy": "2024-03-13T05:50:03.002560Z",
-     "iopub.status.idle": "2024-03-13T05:50:09.119469Z",
-     "shell.execute_reply": "2024-03-13T05:50:09.118775Z"
+     "iopub.execute_input": "2024-05-09T00:44:03.413636Z",
+     "iopub.status.busy": "2024-05-09T00:44:03.413098Z",
+     "iopub.status.idle": "2024-05-09T00:44:09.287914Z",
+     "shell.execute_reply": "2024-05-09T00:44:09.286924Z"
     },
     "papermill": {
-     "duration": 6.121063,
-     "end_time": "2024-03-13T05:50:09.121208",
+     "duration": 5.879183,
+     "end_time": "2024-05-09T00:44:09.289701",
      "exception": false,
-     "start_time": "2024-03-13T05:50:03.000145",
+     "start_time": "2024-05-09T00:44:03.410518",
      "status": "completed"
     },
     "tags": []
@@ -176,10 +176,10 @@
    "id": "dc314a0d",
    "metadata": {
     "papermill": {
-     "duration": 0.001997,
-     "end_time": "2024-03-13T05:50:09.125993",
+     "duration": 0.001828,
+     "end_time": "2024-05-09T00:44:09.293795",
      "exception": false,
-     "start_time": "2024-03-13T05:50:09.123996",
+     "start_time": "2024-05-09T00:44:09.291967",
      "status": "completed"
     },
     "tags": []
@@ -194,16 +194,16 @@
    "id": "5ac247e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T05:50:09.131035Z",
-     "iopub.status.busy": "2024-03-13T05:50:09.130737Z",
-     "iopub.status.idle": "2024-03-13T06:11:10.590499Z",
-     "shell.execute_reply": "2024-03-13T06:11:10.589851Z"
+     "iopub.execute_input": "2024-05-09T00:44:09.298502Z",
+     "iopub.status.busy": "2024-05-09T00:44:09.298269Z",
+     "iopub.status.idle": "2024-05-09T01:04:18.982446Z",
+     "shell.execute_reply": "2024-05-09T01:04:18.981849Z"
     },
     "papermill": {
-     "duration": 1261.46606,
-     "end_time": "2024-03-13T06:11:10.593924",
+     "duration": 1209.689969,
+     "end_time": "2024-05-09T01:04:18.985587",
      "exception": false,
-     "start_time": "2024-03-13T05:50:09.127864",
+     "start_time": "2024-05-09T00:44:09.295618",
      "status": "completed"
     },
     "tags": []
@@ -213,56 +213,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: global; duration: 0:03:15.843744)\n"
+      "Calculating probabilities for PU model complete (region: global; duration: 0:03:04.044133)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:54.157393)\n"
+      "Calculating probabilities for PU model complete (region: North America; duration: 0:02:48.461120)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: South America; duration: 0:03:06.943133)\n"
+      "Calculating probabilities for PU model complete (region: South America; duration: 0:03:15.491652)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:03:10.606686)\n"
+      "Calculating probabilities for PU model complete (region: Southeast Asia; duration: 0:02:58.017589)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:03:10.765249)\n"
+      "Calculating probabilities for PU model complete (region: Tethys; duration: 0:03:03.875284)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:58.452027)\n"
+      "Calculating probabilities for SVM model complete (region: global; duration: 0:01:48.390836)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:33.380360)\n"
+      "Calculating probabilities for SVM model complete (region: North America; duration: 0:01:29.188530)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:51.301283)\n"
+      "Calculating probabilities for SVM model complete (region: South America; duration: 0:01:42.204480)\n"
      ]
     }
    ],
@@ -344,10 +344,10 @@
    "id": "e94d2cc2",
    "metadata": {
     "papermill": {
-     "duration": 0.002345,
-     "end_time": "2024-03-13T06:11:10.598691",
+     "duration": 0.002269,
+     "end_time": "2024-05-09T01:04:18.990246",
      "exception": false,
-     "start_time": "2024-03-13T06:11:10.596346",
+     "start_time": "2024-05-09T01:04:18.987977",
      "status": "completed"
     },
     "tags": []
@@ -362,16 +362,16 @@
    "id": "23b349d7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-13T06:11:10.604296Z",
-     "iopub.status.busy": "2024-03-13T06:11:10.604055Z",
-     "iopub.status.idle": "2024-03-13T07:57:21.512286Z",
-     "shell.execute_reply": "2024-03-13T07:57:21.511544Z"
+     "iopub.execute_input": "2024-05-09T01:04:18.996047Z",
+     "iopub.status.busy": "2024-05-09T01:04:18.995794Z",
+     "iopub.status.idle": "2024-05-09T02:49:58.046152Z",
+     "shell.execute_reply": "2024-05-09T02:49:58.045431Z"
     },
     "papermill": {
-     "duration": 6370.916216,
-     "end_time": "2024-03-13T07:57:21.517145",
+     "duration": 6339.058195,
+     "end_time": "2024-05-09T02:49:58.050757",
      "exception": false,
-     "start_time": "2024-03-13T06:11:10.600929",
+     "start_time": "2024-05-09T01:04:18.992562",
      "status": "completed"
     },
     "tags": []
@@ -381,56 +381,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: global; duration: 0:13:11.713105)\n"
+      "Creating grids for PU model complete (region: global; duration: 0:13:24.150873)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: North America; duration: 0:13:21.995436)\n"
+      "Creating grids for PU model complete (region: North America; duration: 0:13:13.560267)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: South America; duration: 0:13:25.114693)\n"
+      "Creating grids for PU model complete (region: South America; duration: 0:13:04.518712)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:07.798919)\n"
+      "Creating grids for PU model complete (region: Southeast Asia; duration: 0:13:01.150697)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for PU model complete (region: Tethys; duration: 0:13:06.822083)\n"
+      "Creating grids for PU model complete (region: Tethys; duration: 0:13:25.770007)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: global; duration: 0:13:29.665323)\n"
+      "Creating grids for SVM model complete (region: global; duration: 0:13:47.470614)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: North America; duration: 0:13:23.600845)\n"
+      "Creating grids for SVM model complete (region: North America; duration: 0:12:52.056378)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creating grids for SVM model complete (region: South America; duration: 0:13:04.187936)\n"
+      "Creating grids for SVM model complete (region: South America; duration: 0:12:50.362486)\n"
      ]
     }
    ],
@@ -497,10 +497,10 @@
    "id": "d779a208",
    "metadata": {
     "papermill": {
-     "duration": 0.002769,
-     "end_time": "2024-03-13T07:57:21.523014",
+     "duration": 0.002593,
+     "end_time": "2024-05-09T02:49:58.056091",
      "exception": false,
-     "start_time": "2024-03-13T07:57:21.520245",
+     "start_time": "2024-05-09T02:49:58.053498",
      "status": "completed"
     },
     "tags": []
@@ -529,14 +529,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7647.065137,
-   "end_time": "2024-03-13T07:57:24.563805",
+   "duration": 7561.851974,
+   "end_time": "2024-05-09T02:50:00.887140",
    "environment_variables": {},
    "exception": null,
    "input_path": "02a-create_probability_maps_global.ipynb",
-   "output_path": "02a-create_probability_maps_global.ipynb",
+   "output_path": "02a-create_probability_maps_global_output.ipynb",
    "parameters": {},
-   "start_time": "2024-03-13T05:49:57.498668",
+   "start_time": "2024-05-09T00:43:59.035166",
    "version": "2.4.0"
   }
  },
