Re-run preservation notebooks

--- a/04-create_erosion_distribution_global.ipynb
+++ b/04-create_erosion_distribution_global.ipynb
@@ -6,16 +6,16 @@
    "id": "15741578",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:18.159946Z",
-     "iopub.status.busy": "2024-03-14T02:33:18.159607Z",
-     "iopub.status.idle": "2024-03-14T02:33:18.166419Z",
-     "shell.execute_reply": "2024-03-14T02:33:18.165798Z"
+     "iopub.execute_input": "2024-05-10T05:21:50.748758Z",
+     "iopub.status.busy": "2024-05-10T05:21:50.748420Z",
+     "iopub.status.idle": "2024-05-10T05:21:50.756144Z",
+     "shell.execute_reply": "2024-05-10T05:21:50.755555Z"
     },
     "papermill": {
-     "duration": 0.014929,
-     "end_time": "2024-03-14T02:33:18.168510",
+     "duration": 0.01574,
+     "end_time": "2024-05-10T05:21:50.758208",
      "exception": false,
-     "start_time": "2024-03-14T02:33:18.153581",
+     "start_time": "2024-05-10T05:21:50.742468",
      "status": "completed"
     },
     "tags": []
@@ -31,16 +31,16 @@
    "id": "fb711475",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:18.175312Z",
-     "iopub.status.busy": "2024-03-14T02:33:18.175017Z",
-     "iopub.status.idle": "2024-03-14T02:33:22.245002Z",
-     "shell.execute_reply": "2024-03-14T02:33:22.244185Z"
+     "iopub.execute_input": "2024-05-10T05:21:50.764394Z",
+     "iopub.status.busy": "2024-05-10T05:21:50.764132Z",
+     "iopub.status.idle": "2024-05-10T05:22:06.314835Z",
+     "shell.execute_reply": "2024-05-10T05:22:06.313689Z"
     },
     "papermill": {
-     "duration": 4.075474,
-     "end_time": "2024-03-14T02:33:22.247030",
+     "duration": 15.555937,
+     "end_time": "2024-05-10T05:22:06.316999",
      "exception": false,
-     "start_time": "2024-03-14T02:33:18.171556",
+     "start_time": "2024-05-10T05:21:50.761062",
      "status": "completed"
     },
     "tags": []
@@ -71,16 +71,16 @@
    "id": "db65221e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:22.252452Z",
-     "iopub.status.busy": "2024-03-14T02:33:22.252078Z",
-     "iopub.status.idle": "2024-03-14T02:33:22.256398Z",
-     "shell.execute_reply": "2024-03-14T02:33:22.255892Z"
+     "iopub.execute_input": "2024-05-10T05:22:06.323269Z",
+     "iopub.status.busy": "2024-05-10T05:22:06.322885Z",
+     "iopub.status.idle": "2024-05-10T05:22:06.327408Z",
+     "shell.execute_reply": "2024-05-10T05:22:06.326857Z"
     },
     "papermill": {
-     "duration": 0.008665,
-     "end_time": "2024-03-14T02:33:22.257923",
+     "duration": 0.009551,
+     "end_time": "2024-05-10T05:22:06.329061",
      "exception": false,
-     "start_time": "2024-03-14T02:33:22.249258",
+     "start_time": "2024-05-10T05:22:06.319510",
      "status": "completed"
     },
     "tags": []
@@ -108,16 +108,16 @@
    "id": "946bb793",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:22.262734Z",
-     "iopub.status.busy": "2024-03-14T02:33:22.262500Z",
-     "iopub.status.idle": "2024-03-14T02:33:22.266346Z",
-     "shell.execute_reply": "2024-03-14T02:33:22.265840Z"
+     "iopub.execute_input": "2024-05-10T05:22:06.334436Z",
+     "iopub.status.busy": "2024-05-10T05:22:06.334204Z",
+     "iopub.status.idle": "2024-05-10T05:22:06.338431Z",
+     "shell.execute_reply": "2024-05-10T05:22:06.337906Z"
     },
     "papermill": {
-     "duration": 0.00798,
-     "end_time": "2024-03-14T02:33:22.267815",
+     "duration": 0.008704,
+     "end_time": "2024-05-10T05:22:06.339911",
      "exception": false,
-     "start_time": "2024-03-14T02:33:22.259835",
+     "start_time": "2024-05-10T05:22:06.331207",
      "status": "completed"
     },
     "tags": []
@@ -144,16 +144,16 @@
    "id": "4513dafb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:22.272678Z",
-     "iopub.status.busy": "2024-03-14T02:33:22.272450Z",
-     "iopub.status.idle": "2024-03-14T02:33:22.683678Z",
-     "shell.execute_reply": "2024-03-14T02:33:22.683069Z"
+     "iopub.execute_input": "2024-05-10T05:22:06.345317Z",
+     "iopub.status.busy": "2024-05-10T05:22:06.344959Z",
+     "iopub.status.idle": "2024-05-10T05:22:06.689611Z",
+     "shell.execute_reply": "2024-05-10T05:22:06.689090Z"
     },
     "papermill": {
-     "duration": 0.41557,
-     "end_time": "2024-03-14T02:33:22.685396",
+     "duration": 0.34913,
+     "end_time": "2024-05-10T05:22:06.691210",
      "exception": false,
-     "start_time": "2024-03-14T02:33:22.269826",
+     "start_time": "2024-05-10T05:22:06.342080",
      "status": "completed"
     },
     "tags": []
@@ -174,16 +174,16 @@
    "id": "f5dbf3dd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:22.690659Z",
-     "iopub.status.busy": "2024-03-14T02:33:22.690407Z",
-     "iopub.status.idle": "2024-03-14T02:33:22.885696Z",
-     "shell.execute_reply": "2024-03-14T02:33:22.884996Z"
+     "iopub.execute_input": "2024-05-10T05:22:06.695725Z",
+     "iopub.status.busy": "2024-05-10T05:22:06.695444Z",
+     "iopub.status.idle": "2024-05-10T05:22:06.875075Z",
+     "shell.execute_reply": "2024-05-10T05:22:06.874464Z"
     },
     "papermill": {
-     "duration": 0.199965,
-     "end_time": "2024-03-14T02:33:22.887562",
+     "duration": 0.183598,
+     "end_time": "2024-05-10T05:22:06.876670",
      "exception": false,
-     "start_time": "2024-03-14T02:33:22.687597",
+     "start_time": "2024-05-10T05:22:06.693072",
      "status": "completed"
     },
     "tags": []
@@ -205,21 +205,30 @@
    "id": "f91767d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:22.893246Z",
-     "iopub.status.busy": "2024-03-14T02:33:22.892769Z",
-     "iopub.status.idle": "2024-03-14T02:33:23.054151Z",
-     "shell.execute_reply": "2024-03-14T02:33:23.053451Z"
+     "iopub.execute_input": "2024-05-10T05:22:06.881385Z",
+     "iopub.status.busy": "2024-05-10T05:22:06.881157Z",
+     "iopub.status.idle": "2024-05-10T05:22:07.032436Z",
+     "shell.execute_reply": "2024-05-10T05:22:07.031981Z"
     },
     "papermill": {
-     "duration": 0.166201,
-     "end_time": "2024-03-14T02:33:23.055958",
+     "duration": 0.155031,
+     "end_time": "2024-05-10T05:22:07.033704",
      "exception": false,
-     "start_time": "2024-03-14T02:33:22.889757",
+     "start_time": "2024-05-10T05:22:06.878673",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parametric (gamma) distribution: NLL = 4753\n",
+      "Writing parametric distribution to file: outputs/global/erodep_dist_parametric.joblib\n"
+     ]
+    }
+   ],
    "source": [
     "def optimize_func(*args, **kwargs):\n",
     "    return differential_evolution(*args, seed=random_state, **kwargs)\n",
@@ -257,21 +266,30 @@
    "id": "5e97d97d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:23.061539Z",
-     "iopub.status.busy": "2024-03-14T02:33:23.061284Z",
-     "iopub.status.idle": "2024-03-14T02:33:23.080615Z",
-     "shell.execute_reply": "2024-03-14T02:33:23.080072Z"
+     "iopub.execute_input": "2024-05-10T05:22:07.038453Z",
+     "iopub.status.busy": "2024-05-10T05:22:07.038256Z",
+     "iopub.status.idle": "2024-05-10T05:22:07.059171Z",
+     "shell.execute_reply": "2024-05-10T05:22:07.058721Z"
     },
     "papermill": {
-     "duration": 0.02387,
-     "end_time": "2024-03-14T02:33:23.082068",
+     "duration": 0.024903,
+     "end_time": "2024-05-10T05:22:07.060536",
      "exception": false,
-     "start_time": "2024-03-14T02:33:23.058198",
+     "start_time": "2024-05-10T05:22:07.035633",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kernel density estimate (KDE; bandwidth = 1000): NLL = 4774\n",
+      "Writing KDE distribution to file: outputs/global/erodep_dist_kde.joblib\n"
+     ]
+    }
+   ],
    "source": [
     "kde = KernelDensity(\n",
     "    kernel=\"gaussian\",\n",
@@ -295,16 +313,16 @@
    "id": "c5c1ef39",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:23.086719Z",
-     "iopub.status.busy": "2024-03-14T02:33:23.086512Z",
-     "iopub.status.idle": "2024-03-14T02:33:23.933162Z",
-     "shell.execute_reply": "2024-03-14T02:33:23.932488Z"
+     "iopub.execute_input": "2024-05-10T05:22:07.064957Z",
+     "iopub.status.busy": "2024-05-10T05:22:07.064669Z",
+     "iopub.status.idle": "2024-05-10T05:22:07.939913Z",
+     "shell.execute_reply": "2024-05-10T05:22:07.939493Z"
     },
     "papermill": {
-     "duration": 0.851347,
-     "end_time": "2024-03-14T02:33:23.935355",
+     "duration": 0.879188,
+     "end_time": "2024-05-10T05:22:07.941646",
      "exception": false,
-     "start_time": "2024-03-14T02:33:23.084008",
+     "start_time": "2024-05-10T05:22:07.062458",
      "status": "completed"
     },
     "tags": []
@@ -376,16 +394,16 @@
    "id": "e1a064e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-14T02:33:23.945021Z",
-     "iopub.status.busy": "2024-03-14T02:33:23.944773Z",
-     "iopub.status.idle": "2024-03-14T02:33:24.528304Z",
-     "shell.execute_reply": "2024-03-14T02:33:24.527579Z"
+     "iopub.execute_input": "2024-05-10T05:22:07.947887Z",
+     "iopub.status.busy": "2024-05-10T05:22:07.947690Z",
+     "iopub.status.idle": "2024-05-10T05:22:08.601282Z",
+     "shell.execute_reply": "2024-05-10T05:22:08.600646Z"
     },
     "papermill": {
-     "duration": 0.590563,
-     "end_time": "2024-03-14T02:33:24.530249",
+     "duration": 0.658781,
+     "end_time": "2024-05-10T05:22:08.602979",
      "exception": false,
-     "start_time": "2024-03-14T02:33:23.939686",
+     "start_time": "2024-05-10T05:22:07.944198",
      "status": "completed"
     },
     "tags": []
@@ -452,10 +470,10 @@
    "id": "c47d47b6",
    "metadata": {
     "papermill": {
-     "duration": 0.002357,
-     "end_time": "2024-03-14T02:33:24.536604",
+     "duration": 0.002765,
+     "end_time": "2024-05-10T05:22:08.609358",
      "exception": false,
-     "start_time": "2024-03-14T02:33:24.534247",
+     "start_time": "2024-05-10T05:22:08.606593",
      "status": "completed"
     },
     "tags": []
@@ -484,14 +502,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 10.223899,
-   "end_time": "2024-03-14T02:33:27.162154",
+   "duration": 22.192435,
+   "end_time": "2024-05-10T05:22:11.231266",
    "environment_variables": {},
    "exception": null,
    "input_path": "04-create_erosion_distribution_global.ipynb",
-   "output_path": "04-create_erosion_distribution_global.ipynb",
+   "output_path": "04-create_erosion_distribution_global_output.ipynb",
    "parameters": {},
-   "start_time": "2024-03-14T02:33:16.938255",
+   "start_time": "2024-05-10T05:21:49.038831",
    "version": "2.4.0"
   }
  },
