Switch notebooks 0-3 to PMM

--- a/01-create_classifiers.ipynb
+++ b/01-create_classifiers.ipynb
@@ -350,7 +350,7 @@
     "pu_model = make_pipeline(\n",
     "    IterativeImputer(**imputer_params),\n",
     "    RobustScaler(),\n",
-    "    BaggingPuClassifier(base_estimator=base_model, **pu_params),\n",
+    "    BaggingPuClassifier(base_model, **pu_params),\n",
     ")\n",
     "pu_model.set_output(transform=\"pandas\")\n",
     "\n",
