Fix notebook output directory

--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = \"extracted_data_new\"\n",
+    "output_dir = \"extracted_data\"\n",
     "os.makedirs(output_dir, exist_ok=True)"
    ]
   },
