Fix notebook output directory

--- a/01a-create_classifiers_global.ipynb
+++ b/01a-create_classifiers_global.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "data_filename = os.path.join(data_dir, \"training_data_global.csv\")\n",
     "\n",
-    "output_dir = os.path.join(\"outputs_new\", \"global\")\n",
+    "output_dir = os.path.join(output_dir, \"global\")\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "output_deposits = os.path.join(output_dir, \"deposits.png\")\n",
     "\n",
