Fix plate model selection

--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -27,7 +27,13 @@
    "source": [
     "### Select plate model\n",
     "\n",
-    "To use the plate model from the published paper (Alfonso et al., 2024), set `use_provided_plate_model` to `True`. Otherwise, leave `use_provided_plate_model` as `False` and set `plate_model_name` to a valid model name for the [`plate-model-manager`](https://github.com/michaelchin/plate-model-manager/blob/4f66423b53950bf42f5dac1228e61fd1e19fdf6e/models.json) package, or place GPlates files in a directory named `plate_model`."
+    "To use the plate model from the published paper (Alfonso et al., 2024), set `use_provided_plate_model` to `True`. Otherwise, leave `use_provided_plate_model` as `False` and set `plate_model_name` to a valid model name for the [`plate-model-manager`](https://github.com/michaelchin/plate-model-manager/blob/4f66423b53950bf42f5dac1228e61fd1e19fdf6e/models.json) package, or set `plate_model_name` to `None` and place GPlates files in a directory named `plate_model`.\n",
+    "\n",
+    "| `use_provided_plate_model` | `plate_model_name` | result |\n",
+    "| - | - | - |\n",
+    "| `True` | Any | Use Alfonso et al., 2024 model |\n",
+    "| `False` | Model name string (e.g. `\"muller2022\"`) | Use specified plate model |\n",
+    "| `False` | `None` | Use files in `plate_model` directory |"
    ]
   },
   {
@@ -232,6 +238,7 @@
     "plate_model_dir = \"plate_model\"\n",
     "if use_provided_plate_model:\n",
     "    check_plate_model(plate_model_dir, verbose=True)\n",
+    "    plate_model_name = None\n",
     "plate_model = get_plate_reconstruction(\n",
     "    model_name=plate_model_name,\n",
     "    model_dir=plate_model_dir,\n",
