Change 'end_time' to 'max_time', etc

--- a/00c-extract_training_data_global.ipynb
+++ b/00c-extract_training_data_global.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "### Set other parameters\n",
     "\n",
-    "Perhaps the most important options here are `n_jobs` and `end_time`."
+    "Perhaps the most important options here are `n_jobs` and `max_time`."
    ]
   },
   {
@@ -87,8 +87,8 @@
     "overwrite = False\n",
     "\n",
     "# Timespan for analysis\n",
-    "start_time = 0\n",
-    "end_time = 170\n",
+    "min_time = 0\n",
+    "max_time = 170\n",
     "\n",
     "# Control verbosity level of logging output\n",
     "verbose = False\n",
@@ -117,12 +117,12 @@
     "# Override above values with environment variables, if they exist\n",
     "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
     "overwrite = bool(int(os.environ.get(\"OVERWRITE\", overwrite)))\n",
-    "start_time = int(os.environ.get(\"START_TIME\", start_time))\n",
-    "end_time = int(os.environ.get(\"END_TIME\", end_time))\n",
+    "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
+    "max_time = int(os.environ.get(\"MAX_TIME\", max_time))\n",
     "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))\n",
     "num_unlabelled = int(os.environ.get(\"NUM_UNLABELLED\", num_unlabelled))\n",
     "\n",
-    "times = range(start_time, end_time + 1)"
+    "times = range(min_time, max_time + 1)"
    ]
   },
   {
