--- a/00b-extract_grid_data.ipynb
+++ b/00b-extract_grid_data.ipynb
@@ -67,7 +67,7 @@
    "source": [
     "### Set other parameters\n",
     "\n",
-    "Perhaps the most important options here are `n_jobs` and `end_time`."
+    "Perhaps the most important options here are `n_jobs` and `max_time`."
    ]
   },
   {
@@ -87,8 +87,8 @@
     "overwrite = False\n",
     "\n",
     "# Timespan for analysis\n",
-    "start_time = 0\n",
-    "end_time = 170\n",
+    "min_time = 0\n",
+    "max_time = 170\n",
     "\n",
     "# Control verbosity level of logging output\n",
     "verbose = False"
@@ -112,20 +112,14 @@
     "import os\n",
     "\n",
     "# Override above values with environment variables, if they exist\n",
-    "if \"GRID_RESOLUTION\" in os.environ:\n",
-    "    grid_resolution = float(os.environ[\"GRID_RESOLUTION\"])\n",
-    "if \"N_JOBS\" in os.environ:\n",
-    "    n_jobs = int(os.environ[\"N_JOBS\"])\n",
-    "if \"OVERWRITE\" in os.environ:\n",
-    "    overwrite = bool(int(os.environ[\"OVERWRITE\"]))\n",
-    "if \"START_TIME\" in os.environ:\n",
-    "    start_time = int(os.environ[\"START_TIME\"])\n",
-    "if \"END_TIME\" in os.environ:\n",
-    "    end_time = int(os.environ[\"END_TIME\"])\n",
-    "if \"VERBOSE\" in os.environ:\n",
-    "    verbose = bool(int(os.environ[\"VERBOSE\"]))\n",
+    "grid_resolution = float(os.environ.get(\"GRID_RESOLUTION\"), grid_resolution)\n",
+    "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
+    "overwrite = bool(int(os.environ.get(\"OVERWRITE\", overwrite)))\n",
+    "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
+    "max_time = int(os.environ.get(\"MAX_TIME\", max_time))\n",
+    "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))\n",
     "\n",
-    "times = range(start_time, end_time + 1)"
+    "times = range(min_time, max_time + 1)"
    ]
   },
   {
