--- a/03a-create_probability_animations_global.ipynb
+++ b/03a-create_probability_animations_global.ipynb
@@ -142,8 +142,8 @@
     "overwrite = True\n",
     "\n",
     "# Timespan for analysis\n",
-    "start_time = 0\n",
-    "end_time = 170\n",
+    "min_time = 0\n",
+    "max_time = 170\n",
     "\n",
     "# Control verbosity level of logging output\n",
     "verbose = False"
@@ -241,12 +241,12 @@
     "\n",
     "n_jobs = int(os.environ.get(\"N_JOBS\", n_jobs))\n",
     "overwrite = bool(int(os.environ.get(\"OVERWRITE\", overwrite)))\n",
-    "start_time = int(os.environ.get(\"START_TIME\", start_time))\n",
-    "end_time = int(os.environ.get(\"END_TIME\", end_time))\n",
+    "min_time = int(os.environ.get(\"MIN_TIME\", min_time))\n",
+    "max_time = int(os.environ.get(\"MAX_TIME\", max_time))\n",
     "verbose = bool(int(os.environ.get(\"VERBOSE\", verbose)))\n",
     "output_dir = os.environ.get(\"OUTPUT_DIR\", output_dir)\n",
     "\n",
-    "times = range(start_time, end_time + 1)"
+    "times = range(min_time, max_time + 1)"
    ]
   },
   {
